// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`join paths > join({"path":{"segments":[".."],"_tag":"PathRelative"},"_tag":"LocRelDir"}, {"path":{"segments":["lib"],"_tag":"PathRelative"},"file":{"stem":"utils","exten...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  "path": {
    "segments": [
      ".."
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
────────────────────────────────────────────────────
{
  "path": {
    "segments": [
      "lib"
    ],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "utils",
    "extension": ".js",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  "path": {
    "segments": [
      "lib"
    ],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "utils",
    "extension": ".js",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join({"path":{"segments":["home"],"_tag":"PathAbs"},"_tag":"LocAbsDir"}, {"path":{"segments":["documents"],"_tag":"PathRelative"},"_tag":"LocRelDir"}) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  "path": {
    "segments": [
      "home"
    ],
    "_tag": "PathAbs"
  },
  "_tag": "LocAbsDir"
}
────────────────────────────────────────────────────
{
  "path": {
    "segments": [
      "documents"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  "path": {
    "segments": [
      "home",
      "documents"
    ],
    "_tag": "PathAbs"
  },
  "_tag": "LocAbsDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join({"path":{"segments":["home"],"_tag":"PathAbs"},"_tag":"LocAbsDir"}, {"path":{"segments":[],"_tag":"PathRelative"},"file":{"stem":"file","extension":...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  "path": {
    "segments": [
      "home"
    ],
    "_tag": "PathAbs"
  },
  "_tag": "LocAbsDir"
}
────────────────────────────────────────────────────
{
  "path": {
    "segments": [],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "file",
    "extension": ".txt",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  "path": {
    "segments": [
      "home"
    ],
    "_tag": "PathAbs"
  },
  "file": {
    "stem": "file",
    "extension": ".txt",
    "_tag": "File"
  },
  "_tag": "LocAbsFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join({"path":{"segments":["src"],"_tag":"PathRelative"},"_tag":"LocRelDir"}, {"path":{"segments":["..","test"],"_tag":"PathRelative"},"file":{"stem":"file","...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  "path": {
    "segments": [
      "src"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
────────────────────────────────────────────────────
{
  "path": {
    "segments": [
      "..",
      "test"
    ],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "file",
    "extension": ".ts",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  "path": {
    "segments": [
      "test"
    ],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "file",
    "extension": ".ts",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join({"path":{"segments":["src"],"_tag":"PathRelative"},"_tag":"LocRelDir"}, {"path":{"segments":["components"],"_tag":"PathRelative"},"_tag":"LocRelDir"}) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  "path": {
    "segments": [
      "src"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
────────────────────────────────────────────────────
{
  "path": {
    "segments": [
      "components"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  "path": {
    "segments": [
      "src",
      "components"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join({"path":{"segments":["src"],"_tag":"PathRelative"},"_tag":"LocRelDir"}, {"path":{"segments":[],"_tag":"PathRelative"},"file":{"stem":"index","extension"...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  "path": {
    "segments": [
      "src"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
────────────────────────────────────────────────────
{
  "path": {
    "segments": [],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "index",
    "extension": ".ts",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  "path": {
    "segments": [
      "src"
    ],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "index",
    "extension": ".ts",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join({"path":{"segments":[],"_tag":"PathAbs"},"_tag":"LocAbsDir"}, {"path":{"segments":["home"],"_tag":"PathRelative"},"_tag":"LocRelDir"}) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  "path": {
    "segments": [],
    "_tag": "PathAbs"
  },
  "_tag": "LocAbsDir"
}
────────────────────────────────────────────────────
{
  "path": {
    "segments": [
      "home"
    ],
    "_tag": "PathRelative"
  },
  "_tag": "LocRelDir"
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  "path": {
    "segments": [
      "home"
    ],
    "_tag": "PathAbs"
  },
  "_tag": "LocAbsDir"
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join({"path":{"segments":[],"_tag":"PathAbs"},"_tag":"LocAbsDir"}, {"path":{"segments":[],"_tag":"PathRelative"},"file":{"stem":"file","extension":...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  "path": {
    "segments": [],
    "_tag": "PathAbs"
  },
  "_tag": "LocAbsDir"
}
────────────────────────────────────────────────────
{
  "path": {
    "segments": [],
    "_tag": "PathRelative"
  },
  "file": {
    "stem": "file",
    "extension": ".txt",
    "_tag": "File"
  },
  "_tag": "LocRelFile"
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  "path": {
    "segments": [],
    "_tag": "PathAbs"
  },
  "file": {
    "stem": "file",
    "extension": ".txt",
    "_tag": "File"
  },
  "_tag": "LocAbsFile"
}
╚══════════════════════════════════════════════════╝"
`;
